# internal/delivery/http/docs/swagger.json
@@ -4,6 +4,125 @@
         "contact": {}
     },
     "paths": {
+        "/v1/cooking-step": {
+            "put": {
+                "description": "Update cooking step",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cooking-step"
+                ],
+                "summary": "Update cooking step",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateStepRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateStepResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create cooking step",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cooking-step"
+                ],
+                "summary": "Create cooking step",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateStepRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateStepResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/cooking-step/{id}": {
+            "delete": {
+                "description": "Delete cooking step by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cooking-step"
+                ],
+                "summary": "Delete cooking step by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DeleteStepResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/recipe": {
             "get": {
                 "description": "Recipe List",
@@ -22,15 +141,31 @@
                         "type": "integer",
                         "description": "limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "offset",
                         "name": "offset",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "cooking_time_from",
+                        "name": "cooking_time_from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "cooking_time_to",
+                        "name": "cooking_time_to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "guid,guid",
+                        "name": "ingridients",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -128,6 +263,174 @@
                 }
             }
         },
+        "/v1/recipe-ingridient": {
+            "get": {
+                "description": "ingridient list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipe-ingridient"
+                ],
+                "summary": "ingridient list",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Ingridient"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update ingridient",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipe-ingridient"
+                ],
+                "summary": "Update ingridient",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateIngredientRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateIngredientResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create ingridient",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipe-ingridient"
+                ],
+                "summary": "Create ingridient",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateIngredientRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateIngredientResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete ingridient by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipe-ingridient"
+                ],
+                "summary": "Delete ingridient by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "recipe_id",
+                        "name": "recipe_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ingredient_id",
+                        "name": "ingredient_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DeleteIngredientResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/recipe/{id}": {
             "get": {
                 "description": "Recipe by id",
@@ -213,6 +516,9 @@
         "models.CookingSteps": {
             "type": "object",
             "properties": {
+                "cooking_time": {
+                    "type": "number"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -230,6 +536,9 @@
         "models.CookingStepsUpdate": {
             "type": "object",
             "properties": {
+                "cooking_time": {
+                    "type": "number"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -275,11 +584,39 @@
         "models.CreateCookingStepsRequest": {
             "type": "object",
             "properties": {
+                "cooking_time": {
+                    "type": "number"
+                },
                 "description": {
                     "type": "string"
                 },
                 "order_number": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.CreateIngredientRequest": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "number"
+                },
+                "dimension": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "recipe_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateIngredientResponse": {
+            "type": "object",
+            "properties": {
+                "guid": {
+                    "type": "string"
                 }
             }
         },
@@ -308,6 +645,31 @@
                 }
             }
         },
+        "models.CreateStepRequest": {
+            "type": "object",
+            "properties": {
+                "cooking_time": {
+                    "type": "number"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "order_number": {
+                    "type": "integer"
+                },
+                "recipe_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateStepResponse": {
+            "type": "object",
+            "properties": {
+                "guid": {
+                    "type": "string"
+                }
+            }
+        },
         "models.CulinaryAggregator": {
             "type": "object",
             "properties": {
@@ -328,10 +690,26 @@
                 }
             }
         },
+        "models.DeleteIngredientResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.DeleteRecipeResponse": {
             "type": "object",
             "properties": {
                 "succress": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.DeleteStepResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
                     "type": "boolean"
                 }
             }
@@ -381,9 +759,26 @@
                 }
             }
         },
+        "models.Ingridient": {
+            "type": "object",
+            "properties": {
+                "dimension": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Recipe": {
             "type": "object",
             "properties": {
+                "cooking_time": {
+                    "type": "number"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -415,6 +810,34 @@
                 }
             }
         },
+        "models.UpdateIngredientRequest": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "number"
+                },
+                "dimension": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "recipe_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateIngredientResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.UpdateRecipeRequest": {
             "type": "object",
             "properties": {
@@ -439,6 +862,34 @@
             "type": "object",
             "properties": {
                 "succress": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.UpdateStepRequest": {
+            "type": "object",
+            "properties": {
+                "cooking_time": {
+                    "type": "number"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "order_number": {
+                    "type": "integer"
+                },
+                "recipe_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateStepResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
                     "type": "boolean"
                 }
             }
